--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,12 @@
-name: Death Maze
+name: DeathMaze
 version: ${project.version}
 main: dev.vrba.minecraftdeathmaze.DeathMaze
 api-version: 1.16
 prefix: DEATH_MAZE
 authors: [0x4a69726b61]
 website: https://vrba.dev/minecraft/death-maze
+commands:
+  death-maze:
+    aliases: dm
+    description: Starts a new death maze minigame session
+    usage: /death-maze (parameters might be added in the future)
